# povCpp

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PLAN.md  README.md  analyze_diff.py  compile_commands.json  ioPlan.md  performancePlan.md  run_tests_parallel.sh
base/: CMakeLists.txt
base/src/main/java/io/: File.cpp  File.h  FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  FileOutputStream.h  InputStream.cpp  InputStream.h  OutputStream.h  PrintStream.cpp  PrintStream.h
base/src/main/java/lang/: Byte.h  Character.cpp  Character.h  Double.h  Float.cpp  Float.h  Integer.h  Long.h  Math.h  Object.cpp  Object.h  ProcessBuilder.cpp  ProcessBuilder.h  Short.h  String.cpp  String.h  StringBuilder.cpp  StringBuilder.h  System.cpp  System.h
base/src/main/java/util/: ArrayDeque.h  ArrayDeque.txx  ArrayList.h  ArrayList.txx  Collections.h  Collections.txx  Formatter.cpp  Formatter.h  HashMap.h  HashMap.txx  HashMapEntry.h  PriorityQueue.h  PriorityQueue.txx
base/src/main/java/util/concurrent/: Callable.h  ConcurrentLinkedQueue.h  ExecutionException.h  ExecutorService.h  Executors.cpp  Executors.h  Future.h  Void.h
base/src/main/java/util/concurrent/atomic/: AtomicLong.h
base/src/main/vsdk/toolkit/common/: VSDK.cpp  VSDK.h  VSDKFatalException.h
base/src/main/vsdk/toolkit/common/color/: ColorRgb.cpp  ColorRgb.h  ColorRgba.h
base/src/main/vsdk/toolkit/common/dataStructures/: BinaryTreeNode.h
base/src/main/vsdk/toolkit/common/linealAlgebra/: AlgebraPrimitives.cpp  Complex.cpp  Complex.h  Matrix4x4d.cpp  Matrix4x4d.h  Matrix4x4f.cpp  Matrix4x4f.h  MatrixNxM.cpp  MatrixNxM.h  Quaterniond.h  Quaternionf.h  Vector2Dd.h  Vector2Df.h  Vector3Dd.h  Vector3Df.h  Vector4Dd.h  Vector4Df.h
base/src/main/vsdk/toolkit/common/linealAlgebra/exceptions/: MatrixExceptions.h
base/src/main/vsdk/toolkit/common/logging/: Logger.cpp  Logger.h
base/src/main/vsdk/toolkit/common/memoryManagement/: MemoryPool.h  MemoryPool.txx
base/src/main/vsdk/toolkit/common/numericalAnalysis/lookUpTables/: LookUpTableChecksum16.cpp  LookUpTableChecksum16.h  LookUpTableSine.cpp
base/src/main/vsdk/toolkit/common/numericalAnalysis/polynomial/: CubicSolver.cpp  PolynomialSolver.cpp  QuadraticSolver.cpp  QuarticSolver.cpp  QuarticSolver.h
base/src/main/vsdk/toolkit/common/statistics/: GeometryStatistics.cpp  GeometryStatistics.h  RaytraceStatistics.cpp  RaytraceStatistics.h  SolidTextureStatistics.cpp  SolidTextureStatistics.h
base/src/main/vsdk/toolkit/common/symbolicAlgebra/: AlgebraicExpression.cpp  AlgebraicExpression.h  AlgebraicExpressionException.h
base/src/main/vsdk/toolkit/environment/camera/: Camera.cpp  Camera.h  CameraSnapshot.h
base/src/main/vsdk/toolkit/environment/geometry/element/: Intersection.h  Ray.cpp  Ray.h  Triangle.cpp  Triangle.h
base/src/main/vsdk/toolkit/environment/light/: Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
base/src/main/vsdk/toolkit/environment/material/: Material.h  RendererConfiguration.cpp  RendererConfiguration.h  ShadingType.cpp  ShadingType.h
base/src/main/vsdk/toolkit/io/: FileLocator.cpp  FileLocator.h  PersistenceElement.cpp  PersistenceElement.h
base/src/main/vsdk/toolkit/linealAlgebra/processing/: LinearAlgebraEngine.cpp  LinearAlgebraEngine.h  Strategies.h
base/src/main/vsdk/toolkit/media/: Image.cpp  Image.h  IndexedColorImageHDRUncompressed.cpp  IndexedColorImageHDRUncompressed.h  IndexedColorImageUncompressed.cpp  IndexedColorImageUncompressed.h  MediaEntity.h  RGBAColorPalette.cpp  RGBAColorPalette.h  RGBAColorPaletteSpan.h  RGBAImageHDRUncompressed.cpp  RGBAImageHDRUncompressed.h  RGBAPixelHDR.h  RGBColorPalette.cpp  RGBColorPalette.h  RGBPixel.cpp  RGBPixel.h
base/src/main/vsdk/toolkit/media/solidTexture/: TextureUtils.cpp  TextureUtils.h
base/src/main/vsdk/toolkit/media/solidTexture/from2d/: ControlledRGBAImageHDRUncompressed.cpp  ControlledRGBAImageHDRUncompressed.h  ImageTexture.cpp  ImageTexture.h  ImageToSolidTextureInterpolationTypes.h  ImageToSolidTextureProjectionMethods.h  SolidTextureCoordinateMapper.cpp  SolidTextureCoordinateMapper.h
base/src/main/vsdk/toolkit/media/solidTexture/procedural/: BumpTextureFixture.cpp  BumpTextureFixture.h  ColorTextureFixture.cpp  ColorTextureFixture.h  ProceduralNoise.cpp  ProceduralNoise.h
base/src/main/vsdk/toolkit/numericalAnalysis/lookUpTables/: LookUpTableChecksum16.cpp  LookUpTableChecksum16.h  LookUpTableSine.cpp  LookUpTableSine.h
base/src/main/vsdk/toolkit/numericalAnalysis/polynomial/: CubicSolver.cpp  CubicSolver.h  PolynomialSolver.cpp  PolynomialSolver.h  QuadraticSolver.cpp  QuadraticSolver.h  QuarticSolver.cpp  QuarticSolver.h
base/src/main/vsdk/toolkit/processing/: Containment.h
base/src/main/vsdk/toolkit/render/raytracing/: RasterTileArea.cpp  RasterTileArea.h  RasterTileGenerationStrategy.h  RasterTileGenerator.cpp  RasterTileGenerator.h
doc/: CSGByRaySegments.md  CSGFixesPlan.md  CSGPerformance.md  alignmentPlan.md  bakedSceneFallbacks.md  boundingVolumeHierarchyPlan.md  designObjectives.md  doubleToFloatConversionPlan.md  geometryDecouplePlan.md  lazyQualitySelectionPlan.md  lightPlan.md  oopGeometryPlan.md  parallelRaytracerPlan.md  performanceNotes.md  performanceReviewPlan.md  performanceReviewPlan10.md  performanceReviewPlan11.md  performanceReviewPlan12.md  performanceReviewPlan13.md  performanceReviewPlan14.md  performanceReviewPlan15.md  performanceReviewPlan16.md  performanceReviewPlan17.md  performanceReviewPlan2.md  performanceReviewPlan3.md  performanceReviewPlan4.md  performanceReviewPlan5.md  performanceReviewPlan6.md  performanceReviewPlan7.md  performanceReviewPlan8.md  performanceReviewPlan9.md  povGrammar.md  projectClosingSteps.md  vitralNormalizationAnalysis.md  vitralPovrayParallelLearningExperience.md
grammar/: POVLexer.g4  POVParser.g4
scripts/: benchmarkPanel.sh  benchmark_commits.py  clean.sh  compareWithStage01.sh  compile.sh  compileAntrl.sh  compileLegacy.sh  exportDiff.sh  gateCsgScene.sh  lint.sh  parseCoverage.sh  renderAll.sh  renderAllWithCoverage.sh  (+17 more)
(+1077 files in other folders)
